--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -23,7 +23,7 @@ jobs:
         with:
           deploy_key: ${{ secrets.ACTIONS_DEPLOY_KEY }}
           external_repository: hegusung/wic-project.github.io
-          publish_branch: master
+          publish_branch: main
           publish_dir: yml
           destination_dir: _lolbas
           enable_jekyll: true
