Adding the @ back...

--- a/yml/Script/SettingsContent-ms.yml
+++ b/yml/Script/SettingsContent-ms.yml
@@ -18,4 +18,4 @@ Resources:
   - Link: https://hegusung.github.io/LOLBAS-Project-hegusung.github.io/#/cmd
 Acknowledgement:
   - Person: Matt Nelson
-    Handle: enigma0x3
+    Handle: @enigma0x3
